tests/NormalTests/paczka1/fuzzy1/92785707.err
Error in line 6: bFEXzlYPZE S7 49,4
Error in line 4: xI4exN S7 0,9
Error in line 8: bFEXzlYPZE A826 29,6
Error in line 16: bFEXzlYPZE S625 35,2
Error in line 15: SNw S748 79,9
Error in line 18: SNw S625 77,3
Error in line 17: bFEXzlYPZE S7 4,6
